schema/testdata/errors/jobs_permission_attribute_expression_invalid_args.keel
job MyJob1 {
    //expect-error:29:38:E020:'something' not found
    @permission(expression: something > 5)
}

job MyJob2 {
    //expect-error:29:35:E020:'myJob3' not found
    @permission(expression: myJob3.id == true)
}

job MyJob3 {
    //expect-error:29:38:E061:Non-boolean single operand conditions such as '"invalid"' not permitted on @permission
    @permission(expression: "invalid")
}

job MyJob4 {
    //expect-error:17:36:AttributeArgumentError:@permission requires all arguments to be named, for example @permission(roles: [MyRole])
    //expect-error:5:16:AttributeArgumentError:@permission requires either the 'expressions' or 'roles' argument to be provided
    @permission(ctx.isAuthenticated)
}

job MyJob5 {
    //expect-error:17:21:AttributeArgumentError:'expr' is not a valid argument for @permission
    //expect-error:5:16:AttributeArgumentError:@permission requires either the 'expressions' or 'roles' argument to be provided
    @permission(expr: ctx.isAuthenticated)
}

job MyJob6 {
    //expect-error:29:30:E020:'c' not found
    @permission(expression: c.isAuthenticated)
}

job MyJob7 {
    //expect-error:49:56:E020:'invalid' not found on 'Boolean'
    //expect-error:77:83:E020:'person' not found
    @permission(expression: ctx.isAuthenticated.invalid and ctx.identity in person.organisation.invalid)
}

role Admin {
}

role Developer {
}
